--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,8 @@ JWT_REFRESH_EXPIRES_IN="7d"
 # These are SAMPLE values — replace with your actual ones from Google Cloud Console
 GOOGLE_CLIENT_ID="123456789012-abcdefghijklmnopqrstuvwxyz.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET="ABCDefGhijkLmnopQRstuVWxyz"
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=example@gmail.com
+SMTP_PASS=abcd efgh ijkl mnop
