--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts",
+    "env": "node src/scripts/env-manager.cjs",
     "build": "tsc"
   },
   "repository": {
@@ -24,6 +25,7 @@
   "dependencies": {
     "@types/cors": "^2.8.19",
     "@types/nodemailer": "^7.0.3",
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
