--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,8 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=example@gmail.com
 SMTP_PASS=abcd efgh ijkl mnop
+
+# --- Cloudinary ---
+CLOUDINARY_CLOUD_NAME=<your_cloud_name>
+CLOUDINARY_API_KEY=<your_api_key>
+CLOUDINARY_API_SECRET=<your_api_secret>
